--- a/supported/failover/same-net/via-api/2nic/existing-stack/byol/f5-existing-stack-same-net-cluster-byol-2nic-bigip.yaml
+++ b/supported/failover/same-net/via-api/2nic/existing-stack/byol/f5-existing-stack-same-net-cluster-byol-2nic-bigip.yaml
@@ -30,6 +30,8 @@ resources:
    mgmtNetwork:
    ### (REQUIRED) Specify the name of the subnet to use for management traffic, for example 'my-management-subnetwork'.
    mgmtSubnet:
+   ### (Optional) Enter the static IP addresses to use on management interface, separated by a space. Note - For dynamic address provisioning use the default value of 'DYNAMIC'. For example, '10.0.1.100 10.0.1.101' or 'DYNAMIC'.
+   mgmtAddress: DYNAMIC
    ### (REQUIRED) This field restricts management access to specific networks or addresses. Enter an IP address or address range in CIDR notation separated by a space.  **IMPORTANT** This solution requires your Management's subnet at a minimum in order for the peers to cluster.  For example, '10.0.11.0/24 55.55.55.55/32' where 10.0.11.0/24 is your local management subnet and 55.55.55.55/32 is a specific address (ex. orchestration host/desktop/etc.).
    restrictedSrcAddress:
    ### (REQUIRED) Specify the Network name for BIG-IP application traffic, for example 'my-application-network'.
@@ -38,6 +40,8 @@ resources:
    network1SharedVpc: None
    ### (REQUIRED) Specify the subnet of the Network that the BIG-IP should use for application traffic, for example 'my-application-subnetwork'.
    subnet1:
+   ### (Optional) Enter the static IP addresses to use for application traffic, separated by a space. Note - For dynamic address provisioning use the default value of 'DYNAMIC'. For example, '10.0.1.100 10.0.1.101' or 'DYNAMIC'.
+   subnet1Address: DYNAMIC
    ### (OPTIONAL) Enter None if alias IP failover is not required. Enter the alias IP address(es) to be used for application traffic, including CIDR suffix. This address must belong to the subnet noted above in key 'subnet1'. A list of alias IPs can be provided, separated by a space. For example, 'IE 10.x.x.16/28 10.x.x.32/28'.
    aliasIp: None
    ### (OPTIONAL) Enter the number of forwarding rules to create, for example '1'.  All integers from 1 to the max quota for the forwarding rules resource type are allowed.
