--- a/supported/failover/same-net/via-api/2nic/existing-stack/byol/f5-existing-stack-same-net-cluster-byol-2nic-bigip.yaml
+++ b/supported/failover/same-net/via-api/2nic/existing-stack/byol/f5-existing-stack-same-net-cluster-byol-2nic-bigip.yaml
@@ -31,7 +31,7 @@ resources:
    ### (REQUIRED) Specify the name of the subnet to use for management traffic, for example 'my-management-subnetwork'.
    mgmtSubnet:
    ### (Optional) Enter the static IP addresses to use on management interface, separated by a space. Note - For dynamic address provisioning use the default value of 'DYNAMIC'. For example, '10.0.1.100 10.0.1.101' or 'DYNAMIC'.
-   mgmtAddress: DYNAMIC
+   mgmtSubnetAddress: DYNAMIC
    ### (REQUIRED) This field restricts management access to specific networks or addresses. Enter an IP address or address range in CIDR notation separated by a space.  **IMPORTANT** This solution requires your Management's subnet at a minimum in order for the peers to cluster.  For example, '10.0.11.0/24 55.55.55.55/32' where 10.0.11.0/24 is your local management subnet and 55.55.55.55/32 is a specific address (ex. orchestration host/desktop/etc.).
    restrictedSrcAddress:
    ### (REQUIRED) Specify the Network name for BIG-IP application traffic, for example 'my-application-network'.
